--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Portfolio</title>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Language" content="pl">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="wanna learn from be(a)st">
   <meta name="keywords" content="Portfolio">
