adding redux store, fixing tails animation after change route path

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <title>Portfolio</title>
+  <title>Portfolio Piotr Sitarz</title>
+  <html lang="pl-PL">
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Language" content="pl">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="wanna learn from be(a)st">
   <meta name="keywords" content="Portfolio">
