--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <title>Portfolio Piotr Sitarz</title>
-  <html lang="pl-PL">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="wanna learn from be(a)st">
-  <meta name="keywords" content="Portfolio">
-  <meta name="author" content="Piotr Sitarz">
-  <link rel="stylesheet" type="text/css" href="/styles.css" />
-</head>
-
-<body>
-  <div id="app"></div>
-  <script src="/bundle.js"></script>
-</body>
-
+<html lang="pl-PL">
+  <head>
+    <title>Portfolio Piotr Sitarz</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="wanna learn from be(a)st">
+    <meta name="keywords" content="Portfolio">
+    <meta name="author" content="Piotr Sitarz">
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Righteous|Roboto|Redressed" rel="stylesheet">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/bundle.js"></script>
+  </body>
 </html>
