removing illegal character in query : "|" from fonts href link

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <meta name="keywords" content="Portfolio">
     <meta name="author" content="Piotr Sitarz">
     <link rel="stylesheet" type="text/css" href="/styles.css" />
-    <link href="https://fonts.googleapis.com/css?family=Righteous|Roboto|Redressed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Redressed" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
